deploy/eks/argocd/base/tinder-app/recommendation-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-service-app
  namespace: tinder-space
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recommendation-service-app
  template:
    metadata:
      labels:
        app: recommendation-service-app
    spec:
      containers:
        - name: recommendation-service-app
          image: recommendation-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
