deploy/eks/argocd/base/tinder-app/recommendation-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service
  namespace: tinder-space
spec:
  type: ClusterIP
  selector:
    app: recommendation-service
  ports:
    - name: http
      protocol: TCP
      port: 8085
      targetPort: 8085
