deploy/eks/argocd/base/tinder-app/recommendation-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recommendation-ingress
  namespace: tinder-space
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: $(DOMAIN_NAME)
      http:
        paths:
          - path: /api/recommendations
            pathType: Prefix
            backend:
              service:
                name: recommendation-service
                port:
                  number: 8085
